<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lamborgback"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/product_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_productname"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_description"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/cost_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_cost"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rrp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/rrp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insert_rrp"
        android:singleLine="true"
        android:textColor="#000000" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoires"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/categorylist"
        android:layout_width="match_parent"
        android:layout_height="80dp" >
    </ListView>

    <Button
        android:id="@+id/create_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_product" />

</LinearLayout>