<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lamborgback"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/category_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_categoryname"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staffresponsible"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/staff_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_category" />

</LinearLayout>